Changed the way of collecting the elements